--- a/client/css/style_insta.css
+++ b/client/css/style_insta.css
@@ -77,24 +77,30 @@ body{
 
 }
 
+
 .login-btn{
     background-color: rgb(0, 149, 246,.4);
     color: white;
     font-size: 14px;
     font-weight: 540;
-    height: 18px;
-    padding: 6px;
-    width: 63%;
+    height: 2.5em;
+    /* padding: 6px; */
+    width: 88%;
     margin: auto;
     margin-top: 10px;
     border-radius: 3px;
     text-align: center;
-    /* border: 1px solid red; */
-    /* justify-content: center; */
+    
+    border: none;
+    
 }
+.login-btn:active{
+    background-color:black;
+}
+
 .login-btn img{
     /* border: 1px solid red; */
-    margin-top:-.44em;
+    margin-top: .2em;
     width: 30px;
     height: 30px;
 }
